--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         </activity>
         <activity android:name=".WelcomeScreen" />
         <activity android:name=".ActivityBuySellInfo"></activity>
+        <activity android:name=".AccOverview"></activity>
     </application>
 
 </manifest>
